--- a/.github/ISSUE_TEMPLATE/cataloging-problems.yml
+++ b/.github/ISSUE_TEMPLATE/cataloging-problems.yml
@@ -1,6 +1,14 @@
+
 name: Cataloging problems
 description: Metadata issues that need to be fixed
 body:
+ - type: markdown
+    attributes:
+      value: |
+        
+        ---
+        
+        Thank you for taking the time to report a cataloging problem. To address this bug as fast as possible, I need some information.
   - type: input
     id: date
     attributes:
