--- a/.github/ISSUE_TEMPLATE/joint-purchase.yml
+++ b/.github/ISSUE_TEMPLATE/joint-purchase.yml
@@ -1,1 +1,26 @@
 
+
+---
+name: Joint Purchase
+about: A joint purchase for the DRMC collection
+title: ''
+labels: joint purchase
+assignees: lmkrueger
+
+---
+
+**Item Title**
+Add the title here
+
+**Joint Funding Details**
+Add info about who else contributed to this purchase
+
+**Vendor**
+Add where the item was purchase from
+
+**Date Arrived**
+An approximate date the item arrived
+
+**Additional context**
+Add any other context about the problem here.
+
