--- a/.github/ISSUE_TEMPLATE/_catalog-problems.yml
+++ b/.github/ISSUE_TEMPLATE/_catalog-problems.yml
@@ -42,6 +42,7 @@ body:
       options:
         - Call number
         - Barcode
+        - Item not in SearchWorks
         - Wrong storage location
         - Other
     validations:
